[package]
name = "llog"
version = "0.1.0"
authors = ["Lincoln Simmons <lincolnsimmons@gmail.com>"]
edition = "2018"
description = "Command line note taking tool called 'Lincoln Log' (llog). Mostly used to learn Rust."
license-file = "LICENSE"
repository = "https://github.com/Lncn/llog/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
